--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>G3 Architects</title>
+    <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="styles/architects.css">
+    
 </head>
-<body>
-    <header>
-        
+
+<body class="work-sans-font">
+    <Header>
+        <nav>
+            <h3 class="brand">G3 Architects</h3>
+        </nav>
     </header>
     <main>
 
