--- a/index.html
+++ b/index.html
@@ -6,14 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Developer Portfolio</title>
     <link rel="stylesheet" href="styles/architects.css">
-    
+
 </head>
 
 <body class="work-sans-font">
-    <Header>
-        <nav>
+    <Header class="bg-light">
+        <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
+            <ul class="nav-link display-flex">
+                <!-- li.nav-item*4>a.nav-link -->
+                <li class="nav-item"><a href="" class="nav-link text-gray">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">About</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Contact Us</a></li>
+                <li class="nav-item"><a href="" class="nav-link text-gray">Login</a></li>
+            </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h1 class="banner-title">Brand New Group of Architects</h1>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+            <img src="images/banner.png" alt="" class="banner-image">
+        </div>
+        
     </header>
     <main>
 
@@ -22,4 +40,5 @@
 
     </footer>
 </body>
+
 </html>
