--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     </header>
     <main>
+        <!-- teams section starts -->
         <section class="teams display-flex">
             <div class="team-img-container">
                 <img src="images/team1.png" alt="two architect discussing about design">
@@ -42,14 +43,72 @@
                 <img src="images/team4.png" alt="">
             </div>
             <div class="our-feautres">
-                <h3 class="feature-title"><span id="quick-list" class="text-light-gray">Quick list</span><span id=""> of
+                <h3 class="section-title"><span id="quick-list" class="text-light-gray">Quick list</span><span id=""> of
                         Our</span><span class="text-primary"> Features</span></h3>
-                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                <p class="feature-description text-light-gray">There are many variations of passages of Lorem Ipsum
+                    available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
                     look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- some facts -->
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available,
+                but the majority
+                have suffered alteration.</p>
+            <div class="facts-container">
+                <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number text-gray">54</h4>
+                        <h5 class="fact-name text-light-gray">Awards Winning</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number text-gray">1458</h4>
+                        <h5 class="fact-name text-light-gray">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number text-gray">590</h4>
+                        <h5 class="fact-name text-light-gray">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number text-gray">22578</h4>
+                        <h5 class="fact-name text-light-gray">Email Send</h5>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- some facts -->
+        <section class="our-sponsor">
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+
+            </div>
+        </section>
+
     </main>
     <footer>
 
