--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="featured-architect">
                 <img src="images/architect.png" alt="">
-                <button id="experience-bardge" class="btn-primary">
+                <button id="experience-badge" class="btn-primary">
                     <span id="experience-year">10+Year</span>
                     <br>
                     <span>Experience</span>
